--- a/client/src/assets/scss/style.scss
+++ b/client/src/assets/scss/style.scss
@@ -54,4 +54,4 @@ File: style.css
 @import "partials/other/chart";
 @import "partials/other/icon-lauouts";
 
-@import "partials/third-party/third-party";
+// @import "partials/third-party/third-party";
