--- a/client/src/Demo/LandingPage/style.scss
+++ b/client/src/Demo/LandingPage/style.scss
@@ -1,3 +1,26 @@
+.navbar {
+    background-color: #ffe8c2;
+    font-size: 18px;
+    color: black;
+
+    .nav-link {
+        color: black !important;
+
+        &:hover {
+            background-color: lightseagreen;
+            border-radius: 10px;
+        }
+    }
+}
+
+.jumbotron {
+    margin: 0;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
 a {
     color: black;
 }
