Become Mentee About part(1/2)

--- a/client/src/Demo/LandingPage/BecomeMentee.scss
+++ b/client/src/Demo/LandingPage/BecomeMentee.scss
@@ -19,6 +19,12 @@
 
 #why-join {
     background-color: lightgreen;
+
+    #why-join-img {
+        img {
+            width: 100%;
+        }
+    }
 }
 
 #mentee-form {
