--- a/client/src/Demo/LandingPage/style.scss
+++ b/client/src/Demo/LandingPage/style.scss
@@ -37,6 +37,14 @@ a:hover {
     row-gap: 25px;
     justify-content: space-evenly;
 
+    .card {
+        border-radius: 15px;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        transition: all 300ms ease-in-out;
+        height: 250px;
+        width: 250px;
+    }
+
     .card:hover {
         transform: scale(1.05);
         cursor: pointer;
@@ -52,18 +60,14 @@ a:hover {
     }
 }
 
-.card {
-    border-radius: 15px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    transition: all 300ms ease-in-out;
-    height: 250px;
-    width: 250px;
-}
-
-#about-us {
-    background-color: lightgreen;
-}
+// #about-us {
+//     background-color: lightgreen;
+// }
 
 #testimonials {
     background-color: lightsalmon;
+}
+
+.wow {
+    visibility: hidden;
 }
