--- a/client/src/Components/LandingPage/AboutUs.scss
+++ b/client/src/Components/LandingPage/AboutUs.scss
@@ -2,10 +2,12 @@
     #about-us-content {
         background-color: green;
         color: white;
+        height: max-content;
 
         @media screen and (min-width: 768px) {
-            box-shadow: 15px 15px 0px 0px lightgreen;
             border-radius: 15px;
+            width: calc(50% + 100px);
+            flex: 0 0 auto;
         }
     }
 
@@ -20,6 +22,13 @@
             min-height: 100%;
             height: auto;
             width: 100%;
+        }
+
+        @media screen and (min-width: 768px) {
+            flex: 0 0 auto;
+            max-width: 50%;
+            position:relative;
+            left: -100px;
         }
     }
 }
