--- a/client/src/Components/LandingPage/style.scss
+++ b/client/src/Components/LandingPage/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital@0;1&display=swap');
+
 a {
     color: black;
 }
@@ -7,24 +9,7 @@ a:hover {
     color: black;
 }
 
-.navbar {
-    // font-size: 16px;
-    color: black;
-    text-transform: uppercase;
-
-    .nav-link {
-        color: black !important;
-        font-weight: 700;
-        // color: black !important;
-
-        &:hover {
-            background-color: lightseagreen;
-            border-radius: 10px;
-        }
-    }
-}
-
-.jumbotron {
+#jumbo-heading {
     margin: 0;
     min-height: 100vh;
     display: flex;
