--- a/client/src/Components/LandingPage/Navbar.scss
+++ b/client/src/Components/LandingPage/Navbar.scss
@@ -1,16 +1,31 @@
 .navbar {
     // font-size: 16px;
+    background-color: rgba(255, 255, 255, 0.8);
     color: black;
     text-transform: uppercase;
+    align-items: stretch !important;
+    backdrop-filter: blur(5px);
 
-    .nav-link {
-        color: black !important;
-        font-weight: 700;
-        // color: black !important;
+    .navbar-collapse {
+        justify-content: flex-end;
+        align-items: stretch;
 
-        &:hover {
-            background-color: lightseagreen;
-            border-radius: 10px;
+        .navbar-nav {
+            align-items: center;
+
+            .nav-link {
+                color: black !important;
+                font-weight: 700;
+                display: flex;
+                justify-content: space-around;
+                width: 100%;
+
+                @media (min-width: 768px) {
+                    width: auto;
+                    height: 100%;
+                    flex-direction: column;
+                }
+            }
         }
     }
 }
